Changes for 0.85_03     Wed Jul 23 02:07:11 2008
================================================
* Add experimental SQLite backend for sources. This can be
  used instead of the normal memory/storable implementation.
  You can enable it by running by starting the default shell
  and typing:
  's conf source_engine CPANPLUS::Internals::Source::SQLite; s save'
* Selfupdate now understands the SQLite dependencies
* Setup knows how to ask you about SQLite
* CPANPLUS::Dist::new() is now implemented as a properly inherited
  method, with no additional magic. Now, dists are instantiated as:
  use base 'CPANPLUS::Dist::Base';
  CPANPLUS::Dist::YourDist->new;
* Add diagnostic to 's mirrors' to show how to edit the list
  This address #37651: Explain the best way to add mirrors

Changes for 0.85_02     Sun May 18 17:40:56 2008
================================================
* Speed up search slightly be not checking the template
* Speed up $author->distributions call a *lot* by not using clone (which 
  in the end scans through the entire module tree for dslip info)
* Make the package_* functions take an argument for parsing
* Speed up clone() a bit
* Meta files were showing up in the $author->distributions call. These
  are now filtered out.

Changes for 0.85_01     Sun Apr  6 15:22:43 2008 
================================================
* Address #34519 Getting Wrong File with SENGER/NET-IPFilterSimple_V1.1.tar.gz
  The delimiter (_) wsa being replaced by - after parsing. This is now fixed.
* Depend on a newer EU::Installed (1.42), so we can now install into a non-site
  wide dir and actually do uninstalls properly. Requires a few clever dir
  manipulations from our side, but it works.
* Change tests in 20.t accordingly so test suite no longer needs to install
  site wide for testing purposes.
* When changing the 'lib' param in your config using 's edit' from the default
  shell, it wouldn't propagate to the current process. The same applied to