@@ -146,7 +146,7 @@ my $map = {
         failed      => 1,
         match       => ['/This distribution has been tested/',
                         '/http://testers.cpan.org/',
-                        '/FAIL/',
+                        '/UNKNOWN/',
                     ],
         check       => 0,    
     },
@@ -381,8 +381,6 @@ SKIP: {
                         failed        => $map->{$type}{'failed'},
                         tests_skipped => ($map->{$type}{'skiptests'} ? 1 : 0),
                         save          => 1,
-                        dontcc        => 1, # no need to send, and also skips
-                                            # fetching reports from testers.cpan
                     );
 
         ok( $file,              "Type '$type' written to file" );
@@ -426,7 +424,6 @@ SKIP: {
 #                            buffer  => $map->{$type}->{'buffer'},
 #                            failed  => $map->{$type}->{'failed'},
 #                            address => NOBODY,
-#                            dontcc  => 1,
 #                        );
 #            ok( $ok,                "   Mailed report to NOBODY" );
 #       }
